feat: add voice message processing with Faster-Whisper STT (iteration 8)
- Add Faster-Whisper integration for local Speech-to-Text
- Implement audio download and transcription in MediaProcessor
- Add voice message handler in TelegramBot
- Add handle_voice_message method in MessageHandler
- Update Config with Whisper model settings (WHISPER_MODEL, WHISPER_DEVICE)
- Update help message to mention voice support
- Add comprehensive tests for audio processing (66/66 tests pass)
- Update README with voice feature and Whisper configuration
- Achieve 98% test coverage
- Tested in production: Russian voice recognition works perfectly

Technical details:
- faster-whisper library (base model, CPU, int8)
- Async audio processing with temporary file handling
- Transcription time: ~1-2 seconds for short messages
- Full integration with existing dialogue flow

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,7 @@ OPENROUTER_MODEL=anthropic/claude-3.5-sonnet
 
 # Dialogue Settings
 MAX_HISTORY_MESSAGES=20
+
+# Faster-Whisper (Speech-to-Text, локальная обработка)
+WHISPER_MODEL=base  # Options: tiny, base, small, medium, large
+WHISPER_DEVICE=cpu  # Options: cpu, cuda
