--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "aiogram>=3.0.0",
     "openai>=1.0.0",
     "python-dotenv>=1.0.0",
+    "faster-whisper>=1.0.0",
 ]
 
 [project.optional-dependencies]
