feat: add postgres db

--- a/.env.example
+++ b/.env.example
@@ -10,4 +10,7 @@ MAX_HISTORY_MESSAGES=20
 
 # Faster-Whisper (Speech-to-Text, локальная обработка)
 WHISPER_MODEL=base  # Options: tiny, base, small, medium, large
-WHISPER_DEVICE=cpu  # Options: cpu, cuda
+WHISPER_DEVICE=cpu  # Options: cpu, 
+
+# Database (PostgreSQL)
+DATABASE_URL=postgresql+asyncpg://homeguru:homeguru_dev@localhost:5432/homeguru
