--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Environment
 .env
+.env.local
 .venv/
 
 # Python
@@ -16,3 +17,9 @@ bot.log
 
 # uv
 .python-version
+
+# Database
+data/
+
+# Alembic
+*.pyc
