--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ dependencies = [
     "sqlalchemy>=2.0.0",
     "asyncpg>=0.29.0",
     "alembic>=1.13.0",
+    "fastapi>=0.104.0",
+    "uvicorn[standard]>=0.24.0",
+    "pydantic>=2.0.0",
 ]
 
 [project.optional-dependencies]
@@ -21,6 +24,7 @@ dev = [
     "ruff>=0.3.0",
     "mypy>=1.9.0",
     "testcontainers[postgres]>=4.0.0",
+    "httpx>=0.25.0",
 ]
 
 [tool.hatch.build.targets.wheel]
