chore: add frontend rules to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,26 @@ data/
 
 # Alembic
 *.pyc
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Next.js
+.next/
+out/
+build/
+
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts
+
+# Testing
+coverage/
+.nyc_output/
+
+# Vercel
+.vercel
