--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -17,6 +17,10 @@
     "quality": "pnpm run format:check && pnpm run lint && pnpm run typecheck && pnpm run test:ci"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@tanstack/react-query": "^5.90.5",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
@@ -24,6 +28,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "recharts": "^3.3.0",
