feat: work with real db and add web chat

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,10 @@ WHISPER_DEVICE=cpu  # Options: cpu,
 
 # Database (PostgreSQL)
 DATABASE_URL=postgresql+asyncpg://homeguru:homeguru_dev@localhost:5432/homeguru
+
+# API Mode (обязательно для chat)
+COLLECTOR_MODE=real
+
+# Admin Configuration (обязательно для admin режима)
+ADMIN_PASSWORD=admin123
+JWT_SECRET_KEY=your-secret-key-change-in-production
