--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,5 +1,8 @@
 FROM node:20-slim
 
+# Build-time аргумент для API URL
+ARG NEXT_PUBLIC_API_URL=http://localhost:8000
+
 # Установка pnpm
 RUN npm install -g pnpm
 
@@ -14,7 +17,8 @@ RUN pnpm install --frozen-lockfile
 # Копирование остальных файлов
 COPY . ./
 
-# Сборка для production
+# Сборка для production с передачей переменной окружения
+ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
 RUN pnpm run build
 
 EXPOSE 3000
