--- a/env.example
+++ b/env.example
@@ -14,6 +14,7 @@ JWT_ACCESS_TOKEN_EXPIRE_DAYS=30
 
 # OpenRouter API (для LLM)
 OPENROUTER_API_KEY=your-openrouter-api-key
+OPENROUTER_MODEL=anthropic/claude-3.5-sonnet
 LLM_MODEL=anthropic/claude-3.5-sonnet
 
 # Telegram Bot (опционально, если используется)
