--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -22,8 +22,8 @@ services:
       POSTGRES_PASSWORD: homeguru_dev
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
+    # Порт не пробрасывается наружу (безопаснее для production)
+    # PostgreSQL доступен внутри Docker сети на postgres:5432
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U homeguru"]
       interval: 10s
@@ -68,6 +68,7 @@ services:
       retries: 3
 
   frontend:
+    image: ghcr.io/yangdeniz/homeguru-frontend:latest
     build:
       context: ./frontend/app
       dockerfile: ../../Dockerfile.frontend
